// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkButton should add only bpk specific classes if className prop is set to empty string 1`] = `
<button
  className="bpk-button bpk-button--secondary bpk-button--large"
  disabled={false}
  onClick={null}
  type="button"
>
  My button
</button>
`;

exports[`BpkButton should render correctly 1`] = `
<button
  className="bpk-button"
  disabled={false}
  onClick={null}
  type="button"
>
  My button
</button>
`;

exports[`BpkButton should render correctly with "blank" and "rel" attributes 1`] = `
<a
  className="bpk-button"
  href="#"
  onClick={null}
  rel="rel-overwrite"
  target="_blank"
>
  My button
</a>
`;

exports[`BpkButton should render correctly with "blank" attribute 1`] = `
<a
  className="bpk-button"
  href="#"
  onClick={null}
  rel="noopener noreferrer"
  target="_blank"
>
  My button
</a>
`;

exports[`BpkButton should render correctly with "large" and "secondary" attributes 1`] = `
<button
  className="bpk-button bpk-button--secondary bpk-button--large"
  disabled={false}
  onClick={null}
  type="button"
>
  My button
</button>
`;

exports[`BpkButton should render correctly with "rel" attribute 1`] = `
<a
  className="bpk-button"
  href="#"
  onClick={null}
  rel="rel-attr"
  target={null}
>
  My button
</a>
`;

exports[`BpkButton should render correctly with a "destructive" attribute 1`] = `
<button
  className="bpk-button bpk-button--destructive"
  disabled={false}
  onClick={null}
  type="button"
>
  My button
</button>
`;

exports[`BpkButton should render correctly with a "disabled" attribute 1`] = `
<button
  className="bpk-button"
  disabled={true}
  onClick={null}
  type="button"
>
  My button
</button>
`;

exports[`BpkButton should render correctly with a "href" attribute 1`] = `
<a
  className="bpk-button"
  href="#"
  onClick={null}
  rel={null}
  target={null}
>
  My button
</a>
`;

exports[`BpkButton should render correctly with a "large" attribute 1`] = `
<button
  className="bpk-button bpk-button--large"
  disabled={false}
  onClick={null}
  type="button"
>
  My button
</button>
`;

exports[`BpkButton should render correctly with a "link" attribute 1`] = `
<button
  className="bpk-button bpk-button--link"
  disabled={false}
  onClick={null}
  type="button"
>
  My button
</button>
`;

exports[`BpkButton should render correctly with a "secondary" attribute 1`] = `
<button
  className="bpk-button bpk-button--secondary"
  disabled={false}
  onClick={null}
  type="button"
>
  My button
</button>
`;

exports[`BpkButton should render correctly with an "iconOnly" attribute 1`] = `
<button
  className="bpk-button bpk-button--icon-only"
  disabled={false}
  onClick={null}
  type="button"
>
  My button
</button>
`;

exports[`BpkButton should respect the class names entered as a string 1`] = `
<button
  className="bpk-button bpk-button--secondary bpk-button--large custom-class-1 custom-class-2"
  disabled={false}
  onClick={null}
  type="button"
>
  My button
</button>
`;
